--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            /BeanPods/github-snake.svg
-            /BeanPods/github-snake-dark.svg?palette=github-dark
-            /BeanPods/github-snake.gif
+            ../../BeanPods/github-snake.svg
+            ../../BeanPods/github-snake-dark.svg?palette=github-dark
+            ../../BeanPods/github-snake.gif
 
